--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -347,12 +347,12 @@ en:
               blank: Enter the user’s last name
             provider_permissions:
               blank: Please specify a provider
-        change_offer:
+        make_an_offer:
           attributes:
             course_option:
               blank: could not be found
               not_open_on_apply: is not open for applications via the Apply service
-        make_an_offer:
+        offer:
           attributes:
             course_option:
               blank: could not be found
