Remove 'remaining' from withdrawal Slack message
This is redundant as we only send this message when all applications
have been decided

--- a/config/locales/slack_notifications.yml
+++ b/config/locales/slack_notifications.yml
@@ -9,7 +9,7 @@ en:
         other: "was rejected by %{providers}"
     withdrawn:
       message:
-        primary: ":runner: %{applicant} has withdrawn their remaining applications from %{providers}."
+        primary: ":runner: %{applicant} has withdrawn their applications from %{providers}."
         other: "withdrew from %{providers}"
     recruited:
       message:
